# Portfolio

./: README.md
AI/: VoiceBotGeneral.py
AStarPathfinding/: AStarPathfinding.cpp  Cell.cpp  Cell.h  Grid.h  MazeMaker.cpp  MazeMaker.h  Run.bat  Utility.cpp  Utility.h
AStarPathfinding/AStarPathfinding/: AStar.cpp  AStar.h  CMakeLists.txt  Grid.cpp
MarchingCubes/: Chunk.cs  ChunkManager.cs  ChunkManager2.cs  ChunkMarchingCubes.cs  CubeData.cs  Grid.cs  MCGrid.cs  MCSphere2.cs  MCSphereValues.cs  MCValues.cs  MarchingCubesGen.cs  MarchingCubesVisualisation.cs  Node.cs  SingleMarchingCube.cs  Utils.cs
